sumo/tests/traci/VariableRetrieval/Polygon/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 168 69 xxx
simstep 6 1
